--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -12,6 +12,7 @@
             <li>Simon Stålenhag Artwork</li>
             <li>Wikimedia Picture of the Day</li>
             <li>Earth Science Picture of the Day</li>
+            <li>NASA Earth Observatory Image of the Day</li>
         </ul>
         <p>Preview images, pick your favorite source, enable automatic updates, and enjoy a fresh wallpaper every day.</p>
         <p>Note that all images are protected by copyright; you may not be allowed to use or distribute them. Do take a look at the license terms for each image.</p>
@@ -46,9 +47,10 @@
         -->
         <release version="next" date="9999-01-01">
             <description>
-                <p>Add Earth Science Picture of the Day.</p>
+                <p>Add Earth Science Picture of the Day and Earth Observatory Image of the Day.</p>
             </description>
             <issues>
+                <issue url="https://github.com/swsnr/picture-of-the-day/issues/4">GH-4</issue>
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/67">GH-67</issue>
             </issues>
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
