Extend first paragraph of metainfo description

--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -5,7 +5,7 @@
     <name>Picture Of The Day</name>
     <summary>Your daily wallpaper</summary>
     <description>
-        <p>Get a picture of the day from the following sources as your daily wallpaper.</p>
+        <p>Get a picture of the day from the following sources and use as your daily wallpaper.</p>
         <ul>
             <li>NASA Astronomy Picture of the Day</li>
             <li>Bing</li>
