--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -47,7 +47,7 @@
         -->
         <release version="next" date="9999-01-01">
             <description>
-                <p>Add Earth Science Picture of the Day and Earth Observatory Image of the Day.</p>
+                <p>Add Earth Science Picture of the Day and NASA Earth Observatory Image of the Day.</p>
             </description>
             <issues>
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/4">GH-4</issue>
