--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -45,7 +45,7 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
-        <release version="next" date="9999-01-01">
+        <release version="1.3.0" date="2025-04-21">
             <description>
                 <p>Add Earth Science Picture of the Day and NASA Earth Observatory Image of the Day.</p>
             </description>
@@ -53,7 +53,7 @@
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/4">GH-4</issue>
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/67">GH-67</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.3.0</url>
         </release>
         <release version="1.2.0" date="2025-04-06">
             <description>
