Extract update scheduling into separate object
Introduce a new scheduler type which takes care of controlling when
scheduled wallpaper updates happen.

Introduce inhibitors to control when scheduled wallpaper updates are
temporarily or permanently inhibited.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ scraper = ["dep:indexmap", "indexmap/serde", "url/serde"]
 
 [dependencies]
 adw = { package = "libadwaita", version = "0.7.0", features = ["v1_7"] }
+async-channel = "2.3.1"
 jiff = { version = "0.2.10", default-features = false, features = [
     "std",
     "serde",
