--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -1,6 +1,11 @@
 
 # cargo-vet audits file
 
+[[audits.concurrent-queue]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "2.1.0 -> 2.5.0"
+
 [[audits.derive_more]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -15,6 +20,11 @@ delta = "0.3.3 -> 0.3.5"
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 version = "0.10.0"
+
+[[audits.event-listener]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "5.0.0 -> 5.3.1"
 
 [[audits.futf]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
@@ -121,11 +131,29 @@ user-id = 3623 # Sebastian Dröge (sdroege)
 start = "2021-10-16"
 end = "2026-02-12"
 
+[[trusted.concurrent-queue]]
+criteria = "safe-to-run"
+user-id = 33035 # Taiki Endo (taiki-e)
+start = "2022-07-17"
+end = "2026-04-25"
+
 [[trusted.dtoa]]
 criteria = "safe-to-run"
 user-id = 3618 # David Tolnay (dtolnay)
 start = "2019-05-02"
 end = "2026-04-10"
+
+[[trusted.event-listener]]
+criteria = "safe-to-run"
+user-id = 6423 # Zeeshan Ali Khan (zeenix)
+start = "2024-02-05"
+end = "2026-04-25"
+
+[[trusted.event-listener-strategy]]
+criteria = "safe-to-run"
+user-id = 33035 # Taiki Endo (taiki-e)
+start = "2025-03-27"
+end = "2026-04-25"
 
 [[trusted.gdk-pixbuf]]
 criteria = "safe-to-run"
