--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -48,7 +48,11 @@
         <release version="next" date="9999-01-01">
             <description>
                 <p>No longer set the wallpaper automatically while the main window is visible, to allow you to preview different sources without actually changing your desktop background.</p>
+                <p>No longer attempt to set update wallpaper automatically when the system is on low power.</p>
             </description>
+            <issues>
+                <issue url="https://github.com/swsnr/picture-of-the-day/issues/77">GH-77</issue>
+            </issues>
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         <release version="1.3.0" date="2025-04-21">
