--- a/flatpak/de.swsnr.pictureoftheday.Devel.yaml
+++ b/flatpak/de.swsnr.pictureoftheday.Devel.yaml
@@ -11,6 +11,9 @@ finish-args:
   - --socket=fallback-x11
   - --socket=wayland
   - --device=dri
+  # We need to talk to logind to monitor whether the session is locked, see
+  # https://github.com/swsnr/picture-of-the-day/issues/39
+  - --system-talk-name=org.freedesktop.login1
 build-options:
   append-path: /usr/lib/sdk/rust-stable/bin
   env:
