--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -45,7 +45,7 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
-        <release version="next" date="9999-01-01">
+        <release version="1.4.0" date="2025-04-30">
             <description>
                 <p>No longer set the wallpaper automatically while the main window is visible, to allow you to preview different sources without actually changing your desktop background.</p>
                 <p>No longer attempt to set update wallpaper automatically while the session is locked, or the system is on low power or has no network connection.</p>
@@ -58,7 +58,7 @@
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/89">GH-89</issue>
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/92">GH-92</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.4.0</url>
         </release>
         <release version="1.3.0" date="2025-04-21">
             <description>
