--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pictureoftheday"
 description = "A fresh picture of the day as your desktop wallpaper "
-homepage = "https://github.com/swsnr/picture-of-the-day"
-repository = "https://github.com/swsnr/picture-of-the-day"
+homepage = "https://codeberg.org/swsnr/picture-of-the-day"
+repository = "https://codeberg.org/swsnr/picture-of-the-day"
 license = "MPL-2.0"
 authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
 # Our version number.  Since semver doesn't make much sense for UI applications
