--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -27,12 +27,11 @@
         <keyword>Astronomy</keyword>
         <keyword>Artwork</keyword>
     </keywords>
-    <url type="homepage">https://github.com/swsnr/picture-of-the-day</url>
-    <url type="bugtracker">https://github.com/swsnr/picture-of-the-day/discussions/categories/ideas-issues</url>
+    <url type="homepage">https://codeberg.org/swsnr/picture-of-the-day</url>
+    <url type="bugtracker">https://codeberg.org/swsnr/picture-of-the-day/issues</url>
     <url type="translate">https://translate.codeberg.org/engage/de-swsnr-picture-of-the-day/</url>
-    <url type="help">https://github.com/swsnr/picture-of-the-day/discussions/categories/q-a</url>
     <url type="contact">https://swsnr.de/</url>
-    <url type="vcs-browser">https://github.com/swsnr/picture-of-the-day</url>
+    <url type="vcs-browser">https://codeberg.org/swsnr/picture-of-the-day</url>
     <launchable type="desktop-id">de.swsnr.pictureoftheday.desktop</launchable>
     <releases>
         <!-- To start release notes for an upcoming release, copy the following template.
@@ -42,7 +41,7 @@
         <release version="next" date="9999-01-01">
             <description>
             </description>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+            <url>https://codeberg.org/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
         <release version="1.4.0" date="2025-04-30">
@@ -52,23 +51,23 @@
                 <p>Notify and ask to restart app when it was updated in the background.</p>
             </description>
             <issues>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/39">GH-39</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/77">GH-77</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/78">GH-78</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/89">GH-89</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/92">GH-92</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/39">CB-39</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/77">CB-77</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/78">CB-78</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/89">CB-89</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/92">CB-92</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.4.0</url>
+            <url>https://codeberg.org/swsnr/picture-of-the-day/releases/tag/v1.4.0</url>
         </release>
         <release version="1.3.0" date="2025-04-21">
             <description>
                 <p>Add Earth Science Picture of the Day and NASA Earth Observatory Image of the Day.</p>
             </description>
             <issues>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/4">GH-4</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/67">GH-67</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/4">CB-4</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/67">CB-67</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.3.0</url>
+            <url>https://codeberg.org/swsnr/picture-of-the-day/releases/tag/v1.3.0</url>
         </release>
         <release version="1.2.0" date="2025-04-06">
             <description>
@@ -77,12 +76,12 @@
                 <p>Try harder not to leave partially downloaded wallpapers behind when quitting.</p>
             </description>
             <issues>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/15">GH-15</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/16">GH-16</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/18">GH-18</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/50">GH-50</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/15">CB-15</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/16">CB-16</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/18">CB-18</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/50">CB-50</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.2.0</url>
+            <url>https://codeberg.org/swsnr/picture-of-the-day/releases/tag/v1.2.0</url>
         </release>
         <release version="1.1.0" date="2025-03-30">
             <description>
@@ -93,10 +92,10 @@
                 <p>Update to GNOME 48.</p>
             </description>
             <issues>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/14">GH-14</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/30">GH-30</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/14">CB-14</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/30">CB-30</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.1.0</url>
+            <url>https://codeberg.org/swsnr/picture-of-the-day/releases/tag/v1.1.0</url>
         </release>
         <release version="1.0.0" date="2025-03-22">
             <description>
@@ -104,17 +103,17 @@
                 <p>No longer support multiple windows.</p>
             </description>
             <issues>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/13">GH-13</issue>
-                <issue url="https://github.com/swsnr/picture-of-the-day/issues/25">GH-25</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/13">CB-13</issue>
+                <issue url="https://codeberg.org/swsnr/picture-of-the-day/issues/25">CB-25</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.0.0</url>
+            <url>https://codeberg.org/swsnr/picture-of-the-day/releases/tag/v1.0.0</url>
         </release>
         <release version="0.1.0" date="2025-03-08">
             <description>
                 <p>The initial release, with four sources: APOD, Wikimedia, Simon Stålenhag, and Bing.</p>
                 <p>Add a main window to show today's picture of the day and a button to set it as current wallpaper.</p>
             </description>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v0.1.0</url>
+            <url>https://codeberg.org/swsnr/picture-of-the-day/releases/tag/v0.1.0</url>
     </release>
     </releases>
     <project_license>MPL-2.0</project_license>
@@ -123,15 +122,15 @@
     </developer>
     <screenshots>
         <screenshot type="default">
-            <image>https://raw.githubusercontent.com/swsnr/picture-of-the-day/refs/heads/main/screenshots/wikimedia.png</image>
+            <image>https://codeberg.org/swsnr/picture-of-the-day/raw/branch/main/screenshots/wikimedia.png</image>
             <caption>A picture of the day from Wikimedia</caption>
         </screenshot>
         <screenshot>
-            <image>https://raw.githubusercontent.com/swsnr/picture-of-the-day/refs/heads/main/screenshots/preferences.png</image>
+            <image>https://codeberg.org/swsnr/picture-of-the-day/raw/branch/main/screenshots/preferences.png</image>
             <caption>The preferences dialog with settings for image sources</caption>
         </screenshot>
         <screenshot>
-            <image>https://raw.githubusercontent.com/swsnr/picture-of-the-day/refs/heads/main/screenshots/start-page.png</image>
+            <image>https://codeberg.org/swsnr/picture-of-the-day/raw/branch/main/screenshots/start-page.png</image>
             <caption>The empty greeting page with the application icon</caption>
         </screenshot>
     </screenshots>
