Update dependencies and audits

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -11,6 +11,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "0.99.17 -> 0.99.19"
 
+[[audits.derive_more]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "0.99.19 -> 0.99.20"
+
 [[audits.dtoa-short]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
