Replace build script with just compile task
Instead of compiling everything in build.rs we now have a separate just
compile step before.  This reduces build times if we only make source
code changes.

We also remove all compiled UI files, and compile blueprint in the
flatpak build instead.

Finally, we now load resources from files in debug builds; this enables
us to recompile UI files or icons without recompiling the Rust code,
which allows for faster iteration on UI files.

All in all, the build is now simpler and also for faster iteration.

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,8 @@
 /.vscode/
 /.idea/
 
-# Generated from i18n templates
-*.desktop
-resources/*.metainfo.xml
-
-# Compiled settings schemas
-/schemas/*.compiled
+# Build directory for just file
+/build/
 
 # Flatpak outputs
 /.flatpak-builddir/
