Use gnome-app-utils

--- a/deny.toml
+++ b/deny.toml
@@ -20,3 +20,8 @@ allow = [
     "ISC",
     "EUPL-1.2",
 ]
+
+[sources]
+unknown-registry = "deny"
+unknown-git = "deny"
+allow-git = ["https://codeberg.org/swsnr/gnome-app-utils.rs.git"]
