--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,11 +39,9 @@ jiff = { version = "0.2.10", default-features = false, features = [
 futures = "0.3.31"
 gdk4-wayland = { version = "0.9.6", features = ["v4_18"] }
 gdk4-x11 = { version = "0.9.6", features = ["v4_18"] }
-glib = { version = "0.20.7", features = ["log", "log_macros", "v2_84"] }
+glib = { version = "0.20.7", features = ["log_macros"] }
 gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", branch = "main" }
 gtk = { package = "gtk4", version = "0.9.5", features = ["v4_18", "gnome_47"] }
-libc = "0.2.170"
-log = "0.4.22"
 quick-xml = "0.30.0"
 scraper = "0.23.1"
 semver = "1.0.24"
