Make devel build easier to use
Do not patch actual source files to change the app ID; instead copy
relevant files to build/ and then patch them.

Do not hard-code app ID in config.rs; instead write app ID to a special
file in build/ and then include that file in `config.rs`.

This enables us to use a .Devel build from the regular source directory
and thus test with cargo run without interferring with a running regular
app install.

--- a/flatpak/de.swsnr.pictureoftheday.yaml
+++ b/flatpak/de.swsnr.pictureoftheday.yaml
@@ -59,6 +59,6 @@ modules:
       - de.swsnr.pictureoftheday.cargo-sources.json
     build-commands:
       - install -Dm644 cargo/config .cargo/config.toml
-      - just compile
+      - just APPID=de.swsnr.pictureoftheday compile
       - cargo build --frozen --release --verbose
-      - just DESTPREFIX=/app install
+      - just APPID=de.swsnr.pictureoftheday DESTPREFIX=/app install
