--- a/flatpak/de.swsnr.pictureoftheday.Devel.yaml
+++ b/flatpak/de.swsnr.pictureoftheday.Devel.yaml
@@ -55,7 +55,7 @@ modules:
       build-args:
         - --share=network
     build-commands:
-      # Patch version number and app ID before building our binary, then compile
-      - just APPID=de.swsnr.pictureoftheday.Devel patch-devel compile
+      # Patch git describe in Cargo.toml and compile.
+      - just APPID=de.swsnr.pictureoftheday.Devel patch-version compile
       - cargo build --locked --release --verbose
-      - just DESTPREFIX=/app APPID=de.swsnr.pictureoftheday.Devel install
+      - just APPID=de.swsnr.pictureoftheday.Devel install
