--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ version = "1.6.0"
 edition = "2024"
 publish = false
 default-run = "pictureoftheday"
-rust-version = "1.87"
+rust-version = "1.88"
 
 [features]
 # Guards the internal binary for scraping sources
@@ -40,7 +40,7 @@ glib = { version = "0.20.7", features = ["log_macros"] }
 gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", branch = "main" }
 gtk = { package = "gtk4", version = "0.9.5", features = ["v4_18", "gnome_47"] }
 quick-xml = "0.30.0"
-scraper = "0.23.1"
+scraper = { version = "0.23.1", default-features = false }
 semver = "1.0.24"
 serde = { version = "1.0.128", features = ["derive"] }
 serde_json = "1.0.139"
