--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -1,6 +1,16 @@
 
 # cargo-vet audits file
 
+[[audits.autocfg]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "1.4.0 -> 1.5.0"
+
+[[audits.cfg-if]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "1.0.0 -> 1.0.1"
+
 [[audits.concurrent-queue]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -40,6 +50,11 @@ Heavily relies on unsafe, prob. for performance.  unsafe decode looks good, but
 didn't audit the other unsafe code in detail.
 """
 
+[[audits.indexmap]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "2.9.0 -> 2.10.0"
+
 [[audits.litemap]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -66,6 +81,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-deploy"
 delta = "3.2.0 -> 3.3.0"
 
+[[audits.redox_syscall]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "0.5.12 -> 0.5.13"
+
 [[audits.ryu]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -88,6 +108,12 @@ criteria = "safe-to-run"
 delta = "1.0.138 -> 1.0.139"
 notes = "Only documentation changes and dependency updates."
 
+[[audits.servo_arc]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "0.4.0 -> 0.4.1"
+notes = "No actual code changes in this change."
+
 [[audits.siphasher]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -98,6 +124,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "1.14.0 -> 1.15.0"
 
+[[audits.smallvec]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "1.15.0 -> 1.15.1"
+
 [[audits.strum]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -107,6 +138,11 @@ delta = "0.26.3 -> 0.27.1"
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "0.26.4 -> 0.27.1"
+
+[[audits.target-lexicon]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "0.12.16 -> 0.13.2"
 
 [[audits.utf-8]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
