--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ rust-version = "1.88"
 scraper = ["dep:indexmap", "indexmap/serde", "url/serde"]
 
 [dependencies]
-adw = { package = "libadwaita", version = "0.7.0", features = ["v1_7"] }
+adw = { package = "libadwaita", version = "0.8.0", features = ["v1_7"] }
 async-channel = "2.3.1"
 jiff = { version = "0.2.10", default-features = false, features = [
     "std",
@@ -36,15 +36,15 @@ jiff = { version = "0.2.10", default-features = false, features = [
     # We deliberately enable none of the timezone features as we only handle
     # civil dates and don't care about zones at all.
 ] }
-glib = { version = "0.20.7", features = ["log_macros"] }
+glib = { version = "0.21.0", features = ["log_macros"] }
 gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", branch = "main" }
-gtk = { package = "gtk4", version = "0.9.5", features = ["v4_18", "gnome_47"] }
+gtk = { package = "gtk4", version = "0.10.0", features = ["gnome_48"] }
 quick-xml = "0.30.0"
 scraper = { version = "0.23.1", default-features = false }
 semver = "1.0.24"
 serde = { version = "1.0.128", features = ["derive"] }
 serde_json = "1.0.139"
-soup = { package = "soup3", version = "0.7.0", features = ["v3_6"] }
+soup = { package = "soup3", version = "0.8.0", features = ["v3_6"] }
 strum = { version = "0.27.1", features = ["derive"] }
 url = "2.5.4"
 
