Use formatx for translatable strings
xgettext now properly recognizes macros and Rust format strings, so we
can use proper formatting instead of dumb string replacement.

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -46,6 +46,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "5.0.0 -> 5.3.1"
 
+[[audits.formatx]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+version = "0.2.4"
+
 [[audits.futf]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
