--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ serde_json = "1.0.139"
 soup = { package = "soup3", version = "0.8.0", features = ["v3_6"] }
 strum = { version = "0.27.1", features = ["derive"] }
 url = "2.5.4"
+formatx = "0.2.4"
 
 # Optional dependencies for the scraper binary
 indexmap = { version = "2.7.1", optional = true }
