--- a/de.swsnr.pictureoftheday.desktop
+++ b/de.swsnr.pictureoftheday.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 # Translators: Do feel free to translate the application name
-Name=Picture Of The Day
+Name=Picture of the Day
 Comment=A daily picture as your wallpaper
 Exec=de.swsnr.pictureoftheday
 Type=Application
