--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -11,6 +11,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "1.4.0 -> 1.5.0"
 
+[[audits.bitflags]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "2.9.1 -> 2.9.4"
+
 [[audits.cfg-expr]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -20,6 +25,11 @@ delta = "0.20.1 -> 0.20.2"
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "1.0.0 -> 1.0.1"
+
+[[audits.cfg-if]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "1.0.1 -> 1.0.3"
 
 [[audits.concurrent-queue]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
@@ -56,6 +66,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "5.4.0 -> 5.4.1"
 
+[[audits.form_urlencoded]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "1.2.1 -> 1.2.2"
+
 [[audits.formatx]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -85,6 +100,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "0.7.4 -> 0.7.5"
 
+[[audits.log]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "0.4.27 -> 0.4.28"
+
 [[audits.mac]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-deploy"
@@ -96,6 +116,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-deploy"
 delta = "0.3.31 -> 0.3.32"
 
+[[audits.potential_utf]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "0.1.2 -> 0.1.3"
+
 [[audits.proc-macro-crate]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -105,6 +130,11 @@ delta = "1.2.1 -> 3.2.0"
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-deploy"
 delta = "3.2.0 -> 3.3.0"
+
+[[audits.proc-macro2]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "1.0.97 -> 1.0.101"
 
 [[audits.redox_syscall]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
@@ -132,6 +162,16 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "1.0.138 -> 1.0.139"
 notes = "Only documentation changes and dependency updates."
+
+[[audits.serde_json]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "1.0.142 -> 1.0.143"
+
+[[audits.serde_json]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "1.0.142 -> 1.0.143"
 
 [[audits.servo_arc]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
