--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -21,6 +21,11 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "0.20.1 -> 0.20.2"
 
+[[audits.cfg-expr]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "0.20.2 -> 0.20.3"
+
 [[audits.cfg-if]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -130,6 +135,11 @@ delta = "1.2.1 -> 3.2.0"
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-deploy"
 delta = "3.2.0 -> 3.3.0"
+
+[[audits.proc-macro-crate]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "3.3.0 -> 3.4.0"
 
 [[audits.proc-macro2]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
