--- a/flatpak/de.swsnr.pictureoftheday.yaml
+++ b/flatpak/de.swsnr.pictureoftheday.yaml
@@ -46,3 +46,6 @@ modules:
       - just APPID=de.swsnr.pictureoftheday compile
       - cargo build --frozen --release --verbose
       - just APPID=de.swsnr.pictureoftheday DESTPREFIX=/app install
+  - sources:
+      - tag: v1.9.1
+        commit: 49ad94628dcc98ba845a684ab3d0657e53f28be6
