--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ rust-version = "1.89"
 
 [features]
 # Guards the internal binary for scraping sources
-scraper = ["dep:indexmap", "indexmap/serde", "url/serde"]
+scraper = ["dep:scraper", "dep:indexmap", "indexmap/serde", "url/serde"]
 
 [dependencies]
 adw = { package = "libadwaita", version = "0.8.0", features = ["v1_8"] }
@@ -40,7 +40,6 @@ glib = { version = "0.21.2", features = ["log_macros"] }
 gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", rev = "2648d5e7391e07b77bc5a8c45084a15de5a97249" }
 gtk = { package = "gtk4", version = "0.10.1" }
 quick-xml = "0.37.5"
-scraper = { version = "0.23.1", default-features = false }
 semver = "1.0.24"
 serde = { version = "1.0.128", features = ["derive"] }
 serde_json = "1.0.139"
@@ -51,6 +50,7 @@ formatx = "0.2.4"
 
 # Optional dependencies for the scraper binary
 indexmap = { version = "2.7.1", optional = true }
+scraper = { version = "0.23.1", default-features = false, optional = true }
 
 [[bin]]
 name = "scraper"
